--- a/package.json
+++ b/package.json
@@ -22,5 +22,13 @@
   "bugs": {
     "url": "https://github.com/juanpedrosimonaro/SistemaHospitalario/issues"
   },
-  "homepage": "https://github.com/juanpedrosimonaro/SistemaHospitalario#readme"
+  "homepage": "https://github.com/juanpedrosimonaro/SistemaHospitalario#readme",
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.35.1"
+  }
 }
