--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
   },
   "homepage": "https://github.com/juanpedrosimonaro/SistemaHospitalario#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.35.1"
